--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,4 +1,10 @@
 - text: Sezione1
   url: sezione1
+- text: Eventi
+  url: eventi
+- text: Corsi
+  url: corsi
+- text: Trebisonda
+  url: http://ai-sf.it/perugia/Rubrica/
 - text: AISF
   url: http://www.ai-sf.it
