--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,5 +4,7 @@
   url: corsi
 - text: Trebisonda
   url: http://ai-sf.it/perugia/Rubrica/
+- text: Il Comitato Locale
+  url: chisiamo
 - text: AISF
   url: http://www.ai-sf.it
