--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,6 +5,6 @@
 - text: Trebisonda
   url: http://ai-sf.it/perugia/Rubrica/
 - text: Il Comitato Locale
-  url: http://www.ai-sf.it
+  url: chisiamo
 - text: AISF
   url: http://www.ai-sf.it
