--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 # title: "Acr Ev"
 # description: "nome evento completo"
-url: "https://dariozar.github.io/palermo" # the base hostname & protocol for your site
+url: "https://cusimanogiovanni.github.io/palermo" # the base hostname & protocol for your site
 destination: ../site/
 locale: "it"
 
@@ -31,3 +31,4 @@ collections:
 plugins:
  - jekyll-redirect-from
  - jekyll-sitemap
+ 
